# spot_collector

./: CMakeLists.txt  README.md  controls.rviz  controls.sh  package.xml  setup.py
launch/: collector.launch  hector_spot.launch  mapping_spot.launch  points.launch  traversability_map.launch
scripts/: Interf_PoinCloud_Clust.py  Interf_real_time.py  Interf_real_time_changes.py  cloud2grid.py  interface.py  laser_scan_from_PC.py  lib_plot_TFs_real.py  move_spot_pose.py  next best view.py  optimize_route.py  pick_place_srv.py  read_SPOT_clouds.py  read_frame_dataset.py  tf_publisher.py  yolo_garbage_spot.py
src/: lidar_filter.cpp  lidar_filter.h  traversability_builder.cpp  traversability_builder.h
src/spot_collector/: lib_opt_traj.py  optimize_route.py
srv/: MultiGrasp.srv
