<?xml version="1.0"?>
<package format="2">
  <name>spot_garbage_collector</name>
  <version>0.0.0</version>
  <description>The spot_garbage_collector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="brozbohu@fel.cvut.cz">brozbohu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_py</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>depth_image_proc</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>spot_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_py</build_export_depend>
  <build_export_depend>tf2_sensor_msgs</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>
  <build_export_depend>depth_image_proc</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>spot_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>spot_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <build_depend>cmake_modules</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>