<package format="2">
  <name>spot_collector</name>
  <version>1.0.0</version>
  <description>
    Package for using Spot robot to grasp objects from ground.
  </description>

  <author email="christyan.cruz.ulloa@upm.es">Christyan Cruz Ulloa</author>
  <author email="brozbohu@fel.cvut.cz">Bohumil Broz</author>
  <maintainer email="brozbohu@fel.cvut.cz">Bohumil Broz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>spot_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>depth_image_proc</depend>
  <depend>pcl_ros</depend>

  <build_depend>message_generation</build_depend>  

  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>